# catalogue

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: db.sqlite3  manage.py  preloaded_data.json
src/art_archive/: asgi.py  settings.py  urls.py  wsgi.py
src/catalogue/: admin.py  apps.py  art_constants.py  const.py  forms.py  formsets.py  managers.py  models.py  urls.py
src/catalogue/management/commands/: generate_secret_key.py
src/catalogue/migrations/: 0001_initial.py  0002_alter_user_managers_alter_wishlist_unique_together_and_more.py  0003_artist_pseudonym.py  0004_artwork_images.py
src/catalogue/models/: __init__.py  art.py  artist.py  artwork.py  collection.py  comment.py  contextual_reference.py  exhibition.py  location.py  support.py  tag.py  technique.py  user.py  wishlist.py
src/catalogue/static/catalogue/: style.css
src/catalogue/templates/catalogue/: artwork_display.html  artwork_form.html  base.html  dashboard.html  exposed_artworks.html  home.html  index.html  login.html  signup.html  stock_list.html  wishlist_detail.html
src/catalogue/templates/catalogue/forms/: label.html  p.html
src/catalogue/templates/catalogue/forms/widgets/: checkbox_select.html  clearable_file_input.html  file.html  input.html  input_option.html  multiple_hidden.html  radio_option.html  select.html  select_date.html  select_option.html  text.html  textarea.html
src/catalogue/templates/catalogue/partials/: artwork_display.html  artwork_form_fields.html  forms.html
src/catalogue/views/: artwork_views.py  auth_views.py  dashboard_views.py  user_views.py
(+2 files in other folders)
