[project]
name = "art-archive-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "dim-gggl",email = "dimitri.gaggioli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "django (>=5.2.3,<6.0.0)",
]

[tool.poetry]
packages = [{include = "art_archive_tool", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
